[gd_scene load_steps=2 format=3 uid="uid://bi1pw6rtvskbx"]

[ext_resource type="Script" uid="uid://daf0of855ptqt" path="res://Scripts/Test/cvs.gd" id="1_pciu6"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pciu6")

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 159.0
offset_top = 98.0
offset_right = 359.0
offset_bottom = 198.0

[node name="LineEdit2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 165.0
offset_top = 239.0
offset_right = 365.0
offset_bottom = 339.0

[node name="ReadButton" type="Button" parent="."]
layout_mode = 0
offset_left = 622.0
offset_top = 391.0
offset_right = 822.0
offset_bottom = 491.0
text = "Leer"

[node name="DeleteButton" type="Button" parent="."]
layout_mode = 0
offset_left = 397.0
offset_top = 391.0
offset_right = 597.0
offset_bottom = 491.0
text = "Borrar"

[node name="SaveButton" type="Button" parent="."]
layout_mode = 0
offset_left = 167.0
offset_top = 391.0
offset_right = 367.0
offset_bottom = 491.0
text = "Guardar"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 168.0
offset_top = 207.0
offset_right = 289.0
offset_bottom = 249.0
text = "Descripcion"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 163.0
offset_top = 48.0
offset_right = 284.0
offset_bottom = 90.0
text = "Nombre"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 588.0
offset_top = 106.0
offset_right = 934.0
offset_bottom = 420.0

[connection signal="pressed" from="ReadButton" to="." method="_on_read_button_pressed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="SaveButton" to="." method="_on_save_button_pressed"]
